--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-eol": "^0.2.0",
     "gulp-ext-replace": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-gzip": "^1.4.2",
     "gulp-iconfont": "^9.1.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-insert": "^0.5.0",
